Fix issue where the menu was not high enough if both the logo and the page title are not visible.

--- a/less/theme.less
+++ b/less/theme.less
@@ -434,6 +434,7 @@ blockquote {
 	background: lighten(@color-swatch6, 5%);
 	padding: 30px;
 	width: 100%;
+	min-height: 100px;
 	text-align: right;
 	position: fixed;
 	top: 0;
